<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginTop="0dp"
            android:id="@+id/offer_layout"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="Download app and Give review to Get More"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="12sp" />


            <LinearLayout
                android:background="@drawable/bg_offer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/black"
                            android:padding="5dp"
                            android:text="App Name"
                            android:textColor="#fff"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:background="#FCB402"
                            android:padding="3dp"
                            android:text="@string/ad"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/_1_open_play_store"
                            android:textColor="#636262" />

                        <TextView
                            android:id="@+id/txt_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lines="2"
                            android:padding="5dp"
                            android:text="@string/_2_search_for_that_type_or_n_copy_this_name"
                            android:textColor="#636262" />

                        <LinearLayout
                            android:id="@+id/download_link_card"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <ImageView
                                android:id="@+id/app_icon"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/ic_android"
                                android:text="username"
                                android:textColor="#025799" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/app_name"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:paddingStart="10sp"
                                    android:paddingEnd="10sp"
                                    android:text="App Name"
                                    android:textColor="#025799"
                                    android:textSize="18sp" />

                                <ImageView
                                    android:id="@+id/copy_app_link"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_copy"
                                    android:visibility="invisible" />
                            </LinearLayout>

                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/_3_click_to_copy_icon_and_copy_application_name"
                            android:textColor="#636262" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lines="2"
                            android:padding="5dp"
                            android:text="@string/_4_you_will_find_app_is_similar_like_above_icon_and_n_name_download_and_install_it"
                            android:textColor="#636262" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"

                            android:text="@string/_5_open_and_ckeck_app_for_1_minutes"
                            android:textColor="#636262" />

                        <TextView
                            android:id="@+id/txt_6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/_6_give_feedback_review_to"
                            android:textColor="#636262" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/btn_offerwallsubmit"
                    android:textSize="12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/note_give_your_valuable_feedback_and_get_n_more_follower_on_tiktok"
                    android:textColor="@android:color/holo_blue_light" />
                <Button
                    android:layout_marginEnd="5dp"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/btn_offerwallsubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="00dp"
                    android:background="@drawable/bg_next_button"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="Next"
                    android:textColor="#fff"
                    android:textStyle="bold" />


            </RelativeLayout>


        </LinearLayout>

    </ScrollView>


    <RelativeLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:background="@android:color/black"
        android:visibility="gone"
        android:id="@+id/no_layout"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_sad"
            android:id="@+id/img"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:layout_marginTop="5sp"
            android:layout_centerHorizontal="true"
            android:text="Sorry, No Offers Available for you."/>
    </RelativeLayout>

</RelativeLayout>
